--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
 <body>
     <header>
         <img src="./static/logo.jpg" alt="Logo">
-        <span id="site-title" data-key="site_title">CASINO CASLE</span>
+        <span id="site-title" data-key="site_title">bumuz</span>
         <div class="language-switcher">
             <div class="circle" data-lang="ru">
                 <img src="./static/ru.png" alt="Русский" class="lang-icon">
