--- a/bombucks/index.html
+++ b/bombucks/index.html
@@ -255,7 +255,7 @@
 <body>
     <header>
         <img src="./static/logo.jpg" alt="Logo">
-        <span>CASINO CASLE</span>
+        <span>bumuz</span>
     </header>
     <canvas id="particleCanvas" width="1879" height="969"></canvas> <!-- Добавленный элемент canvas -->
     <div>
